Rendering port (#7624)
Refactor world rendering (to match new structurize) into standalone classes connected with rendering context holder (thus removing any world rendering from ClientEventHandler)
Fix MutableChunkPos to be up to date with vanilla version (comments should be used to find classes which depend on vanilla code so we can update them easily)
Moved client method from unsided event handler to client one
Made multipiston optional dependency in mods.toml (not sure if actually applicable, didn't check code dependencies)
Didn't test everything but most works